k8s/04_postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: go-microservice-app
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
