k8s/06_backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: go-microservice-app
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
