k8s/08_frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: go-microservice-app
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
---
