k8s/09a_gateway.yaml
## yaml-language-server: $schema='none'
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: go-microservice-app-gtw
  namespace: go-microservice-app
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - protocol: HTTP
    port: 80
    name: go-microservice-app-http
