k8s/09_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: go-microservice-app
  labels:
    name: go-app-ingress
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 8080
