k8s/09b_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: go-microservice-app-route
  namespace: go-microservice-app
spec:
  parentRefs:
  - kind: Gateway
    name: go-microservice-app-gtw
  rules:
  - matches:
    - path:
        type: PathPrefix 
        value: /
    backendRefs:
    - name: frontend-service
      port: 8080
