k8s/10_gateway.yaml
## yaml-language-server: $schema='none'
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: go-microservice-app-gtw
  namespace: go-microservice-app
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - protocol: HTTPS
    port: 443
    name: go-microservice-app-https
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: secret-tls
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: go-microservice-app-route
  namespace: go-microservice-app
spec:
  parentRefs:
  - kind: Gateway
    name: go-microservice-app-gtw
  rules:
  - matches:
    - path:
        type: PathPrefix 
        value: /
    backendRefs:
    - name: frontend-service
      port: 8080
